--- a/pom.xml
+++ b/pom.xml
@@ -831,6 +831,28 @@
                     <configuration>
                         <compilerId>javac-with-errorprone</compilerId>
                         <forceJavacCompilerUse>true</forceJavacCompilerUse>
+                        <compilerArgs>
+                            <!--                            <arg>-verbose</arg>
+                            <arg>-Xlint:all,-options,-path</arg>-->
+                            <arg>-Xep:StringEquality:ERROR</arg>
+                            <arg>-Xep:ElementsCountedInLoop:ERROR</arg>
+                            <arg>-Xep:Finally:ERROR</arg>
+                            <arg>-Xep:WaitNotInLoop:ERROR</arg>
+                            <arg>-Xep:SynchronizeOnNonFinalField:ERROR</arg>
+                            <arg>-Xep:StaticAccessedFromInstance:ERROR</arg>
+                            <arg>-Xep:NonAtomicVolatileUpdate:ERROR</arg>
+                            <arg>-Xep:ClassCanBeStatic:ERROR</arg>
+                            <arg>-Xep:DivZero:ERROR</arg>
+                            <arg>-Xep:EmptyIf:ERROR</arg>
+                            <arg>-Xep:CovariantEquals:ERROR</arg>
+                            <arg>-Xep:CollectionIncompatibleType:ERROR</arg>
+                            <arg>-Xep:ArraysAsListPrimitiveArray:ERROR</arg>
+                            <arg>-Xep:ModifyingCollectionWithItself:ERROR</arg>
+                            <arg>-Xep:NumericEquality:ERROR</arg>
+                            <arg>-Xep:SelfEquality:ERROR</arg>
+                            <arg>-Xep:SizeGreaterThanOrEqualsZero:ERROR</arg>
+                            <arg>-Xep:TypeParameterUnusedInFormals:ERROR</arg>
+                        </compilerArgs>
                     </configuration>
                     <dependencies>
                         <dependency>
